<resources>
    <string name="app_name">Aves de Benjamín Aceval</string>
    <string name="birdListTitle">Aves de Benjamín Aceval</string>
    <string name="bird_count_label">Especies vistas: %1$d de %2$d</string>
    <string name="bird_description_label">Descripción:</string>
    <string name="bird_description_placeholder">Descripción: ???</string>
    <string name="bird_image_placeholder">Imagen de la ave</string>
    <string name="bird_size_label">"Tamaño: "</string>
    <string name="bird_size_placeholder">Tamaño: ??? cm</string>
    <string name="birdcall_label">"Canto: "</string>
    <string name="birdcall_placeholder">Canto: canta...canta</string>
    <string name="cancel">Cancelar</string>
    <string name="common_name_placeholder">Nombre común</string>
    <string name="confirm_discard">¿Descartar este mensaje?</string>
    <string name="description146">La ave tiene vuelo bajo, y es pardo negruzco.  Tiene un cuello largo, chorreado de blanco, y un pico amarillo.  Sus piernas son largas al igual que su pico.  El grito de el Carau es fuerte, inconfundible, y evocador.  El pico es especialmente adaptado para comer caracoles de manzana.</string>
    <string name="description35">Puede identificarlo por sus patas y perioculares rojas, su pico recto, y sus plumas blancas con alas parcialmente negras.  Los juveniles son negros.  Come muchos tipos de vertebrados y invertibrados, y mientras no se migra, si se muda depender de las condiciones de tiempo y comida.</string>
    <string name="description98">Tiene el plumaje negro en su cuerpo con plumas blancas de vuelo en la punta de su cola corta.  El pico aguileña es amarillo y negro.  Es una ave lento y vago.  Come insectos, reptiles, y animales atropellados.</string>
    <string name="description_placeholder">Descripción</string>
    <string name="discard">Descartar</string>
    <string name="email_chooser_prompt">Enviar correo electrónico...</string>
    <string name="name146">Carau (Karâu)</string>
    <string name="name35">Cigüeña americana (Mbaguari)</string>
    <string name="name98">Águila negra (Yryvutinga)</string>
    <string name="point10Description">Descripción 10</string>
    <string name="point11Description">Descripción 11</string>
    <string name="point12Description">Descripción 12</string>
    <string name="point13Description">Descripción 13</string>
    <string name="point1Description">Descripción 1</string>
    <string name="point2Description">Descripción 2</string>
    <string name="point3Description">Descripción 3</string>
    <string name="point4Description">Descripción 4</string>
    <string name="point5Description">Descripción 5</string>
    <string name="point6Description">Descripción 6</string>
    <string name="point7Description">Descripción 7</string>
    <string name="point8Description">Descripción 8</string>
    <string name="point9Description">Descripción 9</string>
    <string name="pointLabel">Punto</string>
    <string name="scientific_name_placeholder">Nombre científico</string>
    <string name="send">Enviar</string>
    <string name="settings_label">Ajustes</string>
    <string name="size146">54</string>
    <string name="size35">85</string>
    <string name="size98">58(M)/64(F)</string>
    <string name="sound_image_placeholder">Hace clic para escuchar el canto de la ave</string>
    <string name="subject_placeholder">Sujeto</string>
    <string name="unitsSize">cm</string>
    <string name="user_profile_label">Pérfil de Usuario</string>
    <string name="title_activity_maps">Map</string>
    <string name="lang_en">English</string>
    <string name="lang_es">Español</string>
</resources>
