<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.avesyarboles.avesdebenjaminaceval.BirdProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/commonNameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common_name_placeholder"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/scientificNameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scientific_name_placeholder"
                    android:textStyle="italic"/>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/birdcallButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:contentDescription="@string/sound_image_placeholder"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_action_sound" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/birdIV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/bird_image_placeholder"
                app:srcCompat="@mipmap/lang_en" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/birdcallTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/birdcall_placeholder"/>

                <TextView
                    android:id="@+id/birdSizeTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bird_size_placeholder"/>

                <TextView
                    android:id="@+id/descriptionLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bird_description_label"
                    android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/birdDescriptionTV"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.26"
                            android:text="@string/bird_description_placeholder" />
                    </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>